Remove the WSL requirement for GAPIC generation
Requires https://github.com/googleapis/gapic-generator/pull/2269
to be merged first.